--- a/RASD_version_1.lyx
+++ b/RASD_version_1.lyx
@@ -206,12 +206,148 @@ g company, called PowerEnjoy.
 Document Conventions
 \end_layout
 
-\begin_layout Standard
-Qui verrà inserito il glossario: credentials, sapcial parking area, safe
- area, unsafe area, state,time expire fine, terminate ride, final informations,
- tipi di discount
+\begin_layout Itemize
+Headquarter: it is the head office of Power Enjoy Society.
+ There are both call centre and employees who deal with taking care of cars.
 \end_layout
 
+\begin_layout Itemize
+Emergency number: number labeled in the car that the user can call in case
+ of any emergency.
+ 
+\end_layout
+
+\begin_layout Itemize
+Call center: a large office in the Headquarter in which a Power Enjoy's
+ employees provide information or service to its customers by phone when
+ they call the emergency number.
+ 
+\end_layout
+
+\begin_layout Itemize
+Car: it is an electric car registered in the Power Enjoy Company.
+ 
+\end_layout
+
+\begin_layout Itemize
+User: he/she is a client of the service.
+ 
+\end_layout
+
+\begin_layout Itemize
+All Credentials: these are all information about the user that the system
+ needs.
+ The information contains name, last name, social security number, home
+ address, email and drive license number.
+ 
+\end_layout
+
+\begin_layout Itemize
+Login Credentials : are email and password that the user has to provide
+ at the login phase.
+\end_layout
+
+\begin_layout Itemize
+State: is the state of the car which includes the level of battery, position
+ and the number of passengers.
+ If the vehicle is reserved or used the state will be associated with the
+ respective user.
+ 
+\end_layout
+
+\begin_layout Itemize
+Special Parking Areas : are special areas with plugs for the car.
+ 
+\end_layout
+
+\begin_layout Itemize
+Safe Areas: these are the area that determinate the boundary domain of our
+ service.
+ 
+\end_layout
+
+\begin_layout Itemize
+Unsafe Areas: all the areas that are not safe / this term includes everything
+ that is not in the safe areas.
+ 
+\end_layout
+
+\begin_layout Itemize
+Unsafe fine: the fine that the user has to pay if he/she left the car in
+ an unsafe area.
+ 
+\end_layout
+
+\begin_layout Itemize
+Time Expire: the period of time from the reservation that the user has to
+ get to the 
+\begin_inset Quotes eld
+\end_inset
+
+Money saving option
+\begin_inset Quotes erd
+\end_inset
+
+: If the user enables the money saving option, he/she can input his/her
+ final destination and the system provides information about the station
+ where to leave the car to get a discount.
+ This station is determined to ensure a uniform distribution of cars in
+ the city and depends both on the destination of the user and on the availabilit
+y of power plugs at the selected station.
+ 
+\end_layout
+
+\begin_layout Itemize
+ar without paying the expire time fine.
+ 
+\end_layout
+
+\begin_layout Itemize
+Expire time fine: fine that the user has to pay if, after an hour from the
+ reservation, he/she doesn’t reach the car.
+ 
+\end_layout
+
+\begin_layout Itemize
+Final destination: the destination that the user enters in the navigator
+ once he/she has hired a car.
+\end_layout
+
+\begin_layout Itemize
+Symbolic amount: money that the user has to pay once he/she registered,
+ the value is of one cent .
+\end_layout
+
+\begin_layout Itemize
+Money saving option: if the user enables the money saving option, he/she
+ can input his/her final destination and the system provides information
+ about the station where to leave the car to get a discount.
+ This station is determined to ensure a uniform distribution of cars in
+ the city and depends both on the destination of the user and on the availabilit
+y of power plugs at the selected station.
+\end_layout
+
+\begin_layout Itemize
+Types of discount:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+If the system detects the user took at least two other passengers onto the
+ car, the system applies a discount of 10% on the last ride.
+\end_layout
+
+\begin_layout Itemize
+If a car is left with no more than 50% of the battery empty, the system
+ applies a discount of 20% on the last ride.
+\end_layout
+
+\begin_layout Itemize
+If a car is left at special parking areas where they can be recharged the
+ system applies a discount of 30% on the last ride.
+\end_layout
+
+\end_deeper
 \begin_layout Subsection
 Intended Audience And Reading Suggestions
 \end_layout
